# RetrievalHub

./: .env.example  .env.test  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  个人智能知识库检索中间件_整体设计文档.md
deploy/: k8s.yaml
scripts/: test.ps1
src/retrievalhub/: __init__.py  app.py  config.py
src/retrievalhub/api/: __init__.py  documents.py  health.py  middleware.py
src/retrievalhub/core/: access_control.py  exceptions.py  models.py
src/retrievalhub/embedders/: __init__.py  embedder.py
src/retrievalhub/ingest/: __init__.py  crash_recovery.py  enqueue.py  file_handler.py  pipeline.py  rq_backend.py
src/retrievalhub/mcp_server/: __init__.py  tool.py
src/retrievalhub/parsers/: __init__.py  json_chunker.py  json_parser.py  md_chunker.py  md_parser.py
src/retrievalhub/protocols/: __init__.py  chunker.py  embedder.py  enqueue.py  parser.py  reranker.py  storage.py
src/retrievalhub/retrieval/: __init__.py  cache.py  eval.py  fusion.py  recall.py  reranker.py  service.py  tune.py
src/retrievalhub/storage/: __init__.py  lancedb_store.py  metadata_store.py  migration.py
src/retrievalhub/utils/: __init__.py  logging.py
tests/: conftest.py  test_phase0.py  test_phase1_json.py  test_phase1_md.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py
tests/fixtures/: sample.json  sample.jsonl  sample.md
